# htcondor_basecalling

./: .gitattributes  01_pod5_batcher.sub  02_basecall_batches.sub  03_merge_bams.sub  04_demux_bam.sub  05_bam_to_fastq.sub  Dockerfile  README.md  basecall.sh  basecall.sub  env.yaml  justfile  pyproject.toml  workflow.dag
.github/workflows/: docker-image.yaml
conf/: env.yaml  spack.yaml
docs/: index.qmd
