dependencies = []
name = "htcondor_basecall"
authors = [
  { name = "Nicholas Minor", email = "nrminor@wisc.edu" },
  { name = "William Gardner", email = "wkgardner@wisc.edu"},
]
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-64", "linux-64", "linux-aarch64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
seqkit = ">=2.10.1,<3"
parallel = ">=20250822,<20250823"
samtools = ">=1.22.1,<2"
